--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,259 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: solid circle;
+	list-style-position: inside;
+
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+body {
+margin-left:8%;
+margin-right:8%;
+margin-bottom:3%;
+margin-top:3%;
+}
+
+nav {
+	 display: flex;
+	 flex-direction: row;
+	 justify-content: space-between;
+	 width:800px;
+	 height: 60px;
+	 vertical-align: middle;
+	 margin-top: 60px;
+ }
+
+nav a {
+	 color: gray;
+	 text-decoration: none;
+	 font-size: 14px;
+	 padding: 10px;
+	 margin-left: 10px;
+	 display: flex;
+	 justify-content: space-between;
+	 align-items: center;
+ }
+
+ nav a:hover {
+  color: indigo;
+	font-weight: bold;
+}
+
+nav a:first-child {
+  margin-left: 0;
+}
 
 
+ .logo {
+	 display: flex;
+	 justify-content: center;
+ }
+
+header {
+	margin: 0px 10px 30px 10px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
+
+
+h1 {
+	font-size: 350%;
+	padding: 20px;
+	text-align: center;
+}
+
+
+button {
+	border-radius: 2px;
+	padding-right: 20px;
+	padding-left: 20px;
+	padding-top:3px;
+	padding-bottom: 3px;
+	border: 1px solid black;
+	margin: 5px;
+
+}
+
+.text {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.hero-image {
+	margin: 20px;
+}
+
+main {
+	border-bottom: 1px solid black;
+	border-top: 1px solid black;
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
+
+.middle-img {
+	display: inline-block;
+	width: 100%;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+.section1 {
+	display: flex;
+}
+
+.sectionsub1 {
+	display: flex;
+	flex-direction: column;
+	margin:10px;
+}
+
+
+.section2 {
+	display: flex;
+	flex-direction: row;
+}
+
+.sectionsub2 {
+	display: flex;
+	flex-direction: column;
+	margin:10px;
+}
+
+
+.contact {
+	margin-top: 20px;
+}
+
+.email {
+	text-decoration: none;
+	color: black;
+	font-size: 100%;
+	padding
+}
+
+.phone {
+	padding-top: 20px;
+}
+
+
+.copyright {
+	text-align: center;
+	margin: 30px;
+	margin-bottom: 80px;
+}
+
+/*services css starts here */
+
+.overview {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 300px;
+
+}
+
+.service-options {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	height: 600px;
+	justify-content: space-between;
+	align-content: space-between;
+
+}
+
+.option {
+	border: 1px solid black;
+	background-color: #f2f2f2;
+	width: 450px;
+	display: flex;
+	flex-direction: column;
+	align-content: space-between;
+	justify-content: center;
+	padding: 10px;
+}
+
+button {
+	width: 120px;
+	height: 30px;
+	margin-top: 15px;
+	border-radius: 4px;
+
+}
+
+.final-facts {
+	display: flex;
+	flex-direction: row;
+	margin-top: 20px;
+	margin-bottom: 90px;
+	justify-content: space-between;
+}
+
+.some-facts {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+}
+
+li {
+	padding-top: 10px;
+}
