--- a/css/index.css
+++ b/css/index.css
@@ -70,15 +70,13 @@ body {
 
 @media(max-width: 800px) {
   body {
-    width: 760px;
-    margin: 0 auto;
+    width: 90%;
   }
 }
 
 @media(max-width: 500px) {
   body {
-    width: 450px;
-    margin: 0 auto;
+    width: 100%;
   }
 }
 
@@ -87,13 +85,13 @@ nav {
 	 flex-direction: row;
 	 justify-content: space-between;
 	 width:800px;
-	 height: 60px;
 	 vertical-align: middle;
 	 margin-top: 60px;
  }
 
  @media(max-width: 800px) {
    nav {
+     width: 100%;
      display: flex;
      flex-direction: column-reverse;
    }
@@ -101,9 +99,10 @@ nav {
 
  @media(max-width: 500px) {
    nav {
-     background: none;
+     width: 100%;
      display: flex;
      flex-direction: column-reverse;
+     margin-top: 10px;
    }
  }
 
@@ -121,10 +120,10 @@ nav a {
  @media(max-width: 500px) {
    nav a {
      border-bottom: 1px solid gray;
-     margin: 0 0 0 0;
      display: flex;
-     align-content: center;
-     border: 1px solid red;
+     justify-content: center;
+     height: 50px;
+     font-size: 18px;
    }
  }
 
@@ -143,6 +142,8 @@ nav a {
 nav a:first-child {
   margin-left: 0;
 }
+
+
 
 @media(max-width: 800px) {
   .anchors {
@@ -175,6 +176,16 @@ nav a:first-child {
    }
  }
 
+ @media(max-width: 500px) {
+   .logo {
+     display: flex;
+     flex-direction: row;
+     justify-content: center;
+     margin-bottom: 40px;
+     margin-top: 40px;
+   }
+ }
+
 
 header {
 	margin: 0px 10px 30px 10px;
@@ -182,6 +193,12 @@ header {
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
+}
+
+@media(max-width: 500px) {
+  header {
+   margin-top: 30px;
+  }
 }
 
 
